--- a/packages/vite_css/package.json
+++ b/packages/vite_css/package.json
@@ -7,16 +7,19 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "pnpx prettier --write src"
   },
   "dependencies": {
     "@emotion/babel-plugin": "^11.11.0",
     "@vitejs/plugin-react": "^4.0.0",
     "babel-plugin-styled-components": "^2.1.3",
-    "postcss": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^5.3.11"
+    "react-is": "^18.2.0",
+    "styled-components": "^5.3.11",
+    "vite_css": "^0.0.0",
+    "vite_learn": "^1.0.0"
   },
   "devDependencies": {
     "@emotion/css": "^11.11.0",
@@ -33,8 +36,13 @@
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "postcss": "^8.4.24",
+    "prettier": "2.8.8",
     "sass": "^1.62.1",
+    "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
-    "vite": "^4.3.9"
+    "vite": "^4.3.9",
+    "vite-plugin-windicss": "^1.9.0",
+    "windicss": "^3.5.6"
   }
 }
