--- a/package.json
+++ b/package.json
@@ -14,5 +14,18 @@
   "license": "ISC",
   "devDependencies": {
     "husky": "^8.0.3"
+  },
+  "dependencies": {
+    "lint-staged": "^13.2.2"
+  },
+  "lint-staged": {
+    "**/*.{js,jsx,tsx,ts}": [
+      "npm run lint:script",
+      "git add ."
+    ],
+    "**/*.{scss,css}": [
+      "npm run lint:style",
+      "git add ."
+    ]
   }
 }
