--- a/packages/vite_css/package.json
+++ b/packages/vite_css/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint src  --config .eslintrc.cjs",
     "preview": "vite preview",
     "format": "pnpx prettier --write src"
   },
