--- a/packages/vite_lint/package.json
+++ b/packages/vite_lint/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0 && pnpm run lint:style",
+    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "lint:style": "stylelint --fix src/**/*.{css,scss}",
     "prepare": "husky install"
