--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "format": "pnpx prettier --write packages",
     "prepare": "husky install",
-    "lint": "pnpm --filter ./packages/* run lint"
+    "lint": "pnpm --filter ./packages/@vite/ run lint"
   },
   "keywords": [],
   "author": "",
@@ -33,5 +33,10 @@
       "pnpm --filter ./packages/vite_lint run lint:style",
       "git add ."
     ]
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "lodash@4.17.21": "patches/lodash@4.17.21.patch"
+    }
   }
 }
