feat: rollup_plugins

--- a/packages/rollup/package.json
+++ b/packages/rollup/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "rollup -c rollup.config.js"
+    "build": "rollup -c rollup.config.js "
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
