--- a/packages/vite_plugins/package.json
+++ b/packages/vite_plugins/package.json
@@ -2,7 +2,6 @@
   "name": "vite_plugins",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -10,8 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@svgr/core": "^8.0.0",
+    "@svgr/plugin-jsx": "^8.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "resolve": "^1.22.2",
+    "vite-plugin-inspect": "^0.7.28",
+    "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
