--- a/packages/ssr/package.json
+++ b/packages/ssr/package.json
@@ -11,6 +11,7 @@
     "preview": "set NODE_ENV=production&&esno src/ssr-server/index.ts"
   },
   "dependencies": {
+    "@types/serve-static": "^1.15.1",
     "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -27,6 +28,7 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "esno": "^0.16.3",
     "nodemon": "^2.0.22",
+    "serve-static": "^1.15.0",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
   }
