--- a/packages/mf1/package.json
+++ b/packages/mf1/package.json
@@ -13,6 +13,8 @@
     "vite": "^4.3.9"
   },
   "dependencies": {
-    "@originjs/vite-plugin-federation": "^1.2.3"
+    "@originjs/vite-plugin-federation": "^1.2.3",
+    "@types/lodash-es": "^4.17.7",
+    "lodash-es": "^4.17.21"
   }
 }
